fix: restore JDK8 Druid test compatibility